--- a/jobtech/JobRunner/JobRunner.csproj
+++ b/jobtech/JobRunner/JobRunner.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinarySearcher.cs" />
     <Compile Include="BreadthFirstSearch.cs" />
     <Compile Include="DepthFirstSearch.cs" />
     <Compile Include="Graph.cs" />
