--- a/text-adventure-quest/WorldModelCompact/WorldModelCompact.csproj
+++ b/text-adventure-quest/WorldModelCompact/WorldModelCompact.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdventureModel.cs" />
     <Compile Include="Callback.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="Elements.cs" />
