--- a/testing/testing/testing.vcxproj
+++ b/testing/testing/testing.vcxproj
@@ -146,11 +146,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lifegame.h" />
+    <ClInclude Include="lifegrid.h" />
+    <ClInclude Include="sparselife.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lifegame.cpp" />
+    <ClCompile Include="lifegrid.cpp" />
+    <ClCompile Include="sparselife.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
