--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ testing/testing/Release/**
 *.ipch
 *.pch
 *.idb
+adventure/AdventureEngine/AdventureEngine/obj/**
+adventure/AdventureEngine/AdventureEngine/bin/**
+adventure/AdventureEngine/AdventureRunner/obj/**
+adventure/AdventureEngine/AdventureRunner/bin/**
