--- a/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
+++ b/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Component\AttributeBag.cs" />
     <Compile Include="Component\Character.cs" />
     <Compile Include="Component\Container.cs" />
     <Compile Include="Component\Inventory.cs" />
@@ -49,12 +50,16 @@
     <Compile Include="Interface\IComponent.cs" />
     <Compile Include="Interface\IEntity.cs" />
     <Compile Include="Interface\IPreFab.cs" />
+    <Compile Include="Interface\ISerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="System\ComponentFactory.cs" />
-    <Compile Include="System\DefaultComponentFactory.cs" />
-    <Compile Include="System\EntityFactory.cs" />
+    <Compile Include="System\AdventureModel.cs" />
+    <Compile Include="Factory\ComponentFactory.cs" />
+    <Compile Include="Factory\DefaultComponentFactory.cs" />
+    <Compile Include="Factory\EntityFactory.cs" />
     <Compile Include="System\GameEngine.cs" />
-    <Compile Include="System\PreFabFactory.cs" />
+    <Compile Include="System\GameSystem.cs" />
+    <Compile Include="Factory\PreFabFactory.cs" />
+    <Compile Include="System\MoveSystem.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
