--- a/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
+++ b/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Component\Portal.cs" />
     <Compile Include="Component\Room.cs" />
     <Compile Include="Entity\AbstractEntity.cs" />
+    <Compile Include="Entity\EntityId.cs" />
     <Compile Include="Factory\FactoryTemplate.cs" />
     <Compile Include="Interface\IComponent.cs" />
     <Compile Include="Interface\IEntity.cs" />
