--- a/adventure/AdventureEngine/AdventureRunner/AdventureRunner.csproj
+++ b/adventure/AdventureEngine/AdventureRunner/AdventureRunner.csproj
@@ -49,6 +49,7 @@
     <Compile Include="PrefabTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmallTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
