--- a/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
+++ b/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
@@ -39,9 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action\ActionBus.cs" />
-    <Compile Include="Action\MoveAction.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Bus\ActionBus.cs" />
+    <Compile Include="Bus\MoveAction.cs" />
     <Compile Include="Component\AbstractComponent.cs" />
     <Compile Include="Component\AttributeBag.cs" />
     <Compile Include="Component\Character.cs" />
@@ -51,21 +50,23 @@
     <Compile Include="Component\Portal.cs" />
     <Compile Include="Component\Room.cs" />
     <Compile Include="Entity\AbstractEntity.cs" />
+    <Compile Include="Entity\DefaultEntityEvents.cs" />
     <Compile Include="Entity\EntityId.cs" />
+    <Compile Include="Entity\EntityEvents.cs" />
     <Compile Include="Factory\FactoryTemplate.cs" />
     <Compile Include="Interface\IComponent.cs" />
     <Compile Include="Interface\IEntity.cs" />
     <Compile Include="Interface\IPreFab.cs" />
     <Compile Include="Interface\ISerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="System\AdventureModel.cs" />
+    <Compile Include="Model\AdventureModel.cs" />
     <Compile Include="Factory\ComponentFactory.cs" />
     <Compile Include="Factory\DefaultComponentFactory.cs" />
     <Compile Include="Factory\EntityFactory.cs" />
-    <Compile Include="System\GameEngine.cs" />
-    <Compile Include="System\GameSystem.cs" />
+    <Compile Include="Model\GameEngine.cs" />
+    <Compile Include="Model\GameSystem.cs" />
     <Compile Include="Factory\PreFabFactory.cs" />
-    <Compile Include="System\MoveSystem.cs" />
+    <Compile Include="Model\MoveSystem.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
