--- a/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
+++ b/adventure/AdventureEngine/AdventureEngine/AdventureEngine.csproj
@@ -47,11 +47,13 @@
     <Compile Include="Component\Item.cs" />
     <Compile Include="Component\Portal.cs" />
     <Compile Include="Component\Room.cs" />
+    <Compile Include="EventBus\EventBus.cs" />
     <Compile Include="Interface\IComponent.cs" />
     <Compile Include="Interface\IEntity.cs" />
     <Compile Include="Interface\IPreFab.cs" />
     <Compile Include="Interface\ISerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialize\AdventureModelSerializeFromQuest.cs" />
     <Compile Include="System\AdventureModel.cs" />
     <Compile Include="Factory\ComponentFactory.cs" />
     <Compile Include="Factory\DefaultComponentFactory.cs" />
