--- a/testing/logical/logical.csproj
+++ b/testing/logical/logical.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MatchMaker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionMatcher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
