--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,5 @@ testing/testing/Release/**
 *.ipch
 *.pch
 *.idb
-adventure/AdventureEngine/AdventureEngine/obj/**
-adventure/AdventureEngine/AdventureEngine/bin/**
-adventure/AdventureEngine/AdventureRunner/obj/**
-adventure/AdventureEngine/AdventureRunner/bin/**
+adventure/AdventureEngine/AdventureRunner/obj/
+adventure/AdventureEngine/AdventureRunner/bin/
