--- a/adventure/AdventureEngine/AdventureRunner/AdventureRunner.csproj
+++ b/adventure/AdventureEngine/AdventureRunner/AdventureRunner.csproj
@@ -60,6 +60,10 @@
       <Name>AdventureEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="data\adventure_test.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
