--- a/testing/design/design.csproj
+++ b/testing/design/design.csproj
@@ -43,9 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BirdSimulator.cs" />
     <Compile Include="EquipmentDesign.cs" />
+    <Compile Include="MonsterGroupMatcher.cs" />
+    <Compile Include="MonsterGroupMatcherForTeam.cs" />
+    <Compile Include="MonsterGroupMatcherWithTraits.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionMatcherManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
